# cr8s

./: Cargo.toml  Rocket.toml  docker-compose.yml  dockerfile  models.rs  repositories.rs
migrations/2024-04-30-181858_create_rustacean/: down.sql  up.sql
migrations/2024-04-30-181919_create_crates/: down.sql  up.sql
migrations/2024-05-08-180506_create_users/: down.sql  up.sql
migrations/2024-05-08-180518_create_roles/: down.sql  up.sql
migrations/2024-05-08-180541_create_users_roles/: down.sql  up.sql
src/: lib.rs  main.rs
src/auth/: mod.rs
src/commands/: mod.rs
src/models/: crates.rs  roles.rs  rustaceans.rs  user_roles.rs  users.rs
src/repositories/: crate_repository.rs  mod.rs  role_repository.rs  rustacean_repository.rs  user_repository.rs
src/routes/: auth.rs  crates.rs  mod.rs  rustaceans.rs
src/tests/: auth.rs  crates.rs  mod.rs  rustaceans.rs
src/tests/common/: mod.rs
src/tests/utility/: common.rs
src/utils/: database.rs
