[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
